--- a/FE/src/assets/main.scss
+++ b/FE/src/assets/main.scss
@@ -1,10 +1,11 @@
 @import "./base.css";
 
 #app {
-  /* max-width: 1280px; */
+  width: 100vw;
+  max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
 }
 
